--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="assets/css/styles.css">
+        <!--=============== REMIX ICONS ===============-->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
         <title>Clio Bala</title>
     </head>
     <body>
         <header class="header">
+            
             <nav class="nav container">
                 <a href="#home" class="nav__logo">
                     GARAGE
@@ -15,6 +18,8 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
+                        
+                        <li class="nav__item"><i class="ri-moon-line change-theme" id="theme-button"></i></li>
                         <li class="nav__item"><a href="" class="nav__link">Home</a></li>
                         <li class="nav__item"><a href="#especificacoes" class="nav__link">Especificações</a></li>
                         <li class="nav__item"><a href="#galeria" class="nav__link">Galeria</a></li>
